刊登介面調整(完成)

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -84,7 +84,7 @@
                     <div class="col-md-12">
                         <div class="form-group d-flex">
                             <select id="createkind" class="form-control">
-                                <option value="default" selected="selected">種類</option>
+                                <option value="default" selected="selected">物種</option>
                                 <option value="狗">狗</option>
                                 <option value="貓">貓</option>
                                 <option value="鳥">鳥</option>
@@ -212,7 +212,7 @@
                     <div class="col-md-12">
                         <div class="form-group d-flex">
                             <select id="kind" class="form-control">
-                                <option value="default" selected="selected">種類</option>
+                                <option value="default" selected="selected">物種</option>
                                 <option value="狗">狗</option>
                                 <option value="貓">貓</option>
                                 <option value="鳥">鳥</option>
@@ -286,10 +286,9 @@
                         </div>
                     </div>
                     <div class="col-md-12">
+                        上傳圖片 :
                         <div class="form-group">
-                            <label>
                                 <input type="file" id="animalPhoto"/>
-                            </label>
                         </div>
                     </div>
                     <div class="col-md-12">
