--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -241,7 +241,7 @@
                         <a id="login" class="dropdown-item" href="/login_register"
                            style="border-radius: 0 0 0.5rem 0.5rem">登入</a>
                         <a id="userManagement" class="dropdown-item" href="/user_management" style="display: none;">會員資料</a>
-                        <a id="publish" class="dropdown-item" href="/publish" style="display: none;">刊登 送養/協尋</a>
+                        <a id="publish" class="dropdown-item" href="/publish" style="display: none;">我想送養/協尋</a>
                         <a id="userPublishHistory" class="dropdown-item" href="/user_publish_history"
                            style="display: none;">我的刊登</a>
                         <a id="sign_out" class="dropdown-item" href="javascript: signOutRedirect()"
