刊登清單調整

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -277,7 +277,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingDate" type="date" class="form-control" placeholder="走失日期">
+                            <input id="missingDate" type="date" value="2023-01-01" class="form-control" placeholder="走失日期">
                         </div>
                     </div>
                     <div class="col-md-12">
