--- a/src/main/resources/templates/user_publish_history.html
+++ b/src/main/resources/templates/user_publish_history.html
@@ -132,13 +132,6 @@
 <body>
 <div id="header-page"></div>
 
-<dialog id="delinfoModal">
-    <p>確定刪除?</p>
-    <button id="delConfirm" onclick="delPublish()">確定</button>
-    <button id="delclose">close</button>
-</dialog>
-
-
 <dialog id="infoModal">
     <div class="col-md-6">
         <div class="form-group">
@@ -231,6 +224,7 @@
             </li>
         </ul>
         <div id="myTabContent" class="tab-content">
+            <!--一般領養 Table-->
             <div class="tab-pane fade show active" id="personal">
                 <!-- 顯示資料內容 -->
                 <div class="row ftco-animate">
@@ -259,6 +253,7 @@
                     </div>
                 </div>
             </div>
+            <!--走失協尋 Table-->
             <div class="tab-pane fade" id="missing">
                 <!-- 顯示資料內容 -->
                 <div class="row ftco-animate">
@@ -271,7 +266,7 @@
                             <th style="width: 10%;">品種</th>
                             <th style="width: 10%;">性別</th>
                             <th style="width: 10%;">刊登日期</th>
-                            <th style="width: 10%;">更新日期</th>
+                            <th style="width: 10%;">走失日期</th>
                             <th style="width: 20%;">操作</th>
                         </tr>
                         </tbody>
@@ -448,17 +443,19 @@
 <script src="js/updatePublish.js"></script>
 <script src="js/delPublish.js"></script>
 <script>
-
+    //////////////////////////////////////////////////////////////////////
+    // 一般領養
     // 查詢該使用者的刊登資訊
-    $.ajax({
-        type: "GET",
-        url: "/personalAnimals?id=" + user.id,
-        success: function (data) {
-            // 清空表格 tr 元素
-            $("#personalTableAjax").children("tr").empty();
+    function getPersonal() {
+        $.ajax({
+            type: "GET",
+            url: "/personalAnimals?id=" + user.id,
+            success: function (data) {
+                // 清空表格 tr 元素
+                $("#personalTableAjax").children("tr").empty();
 
-            $.each(data["results"], function (index, item) {
-                var tableContent = `
+                $.each(data["results"], function (index, item) {
+                    var tableContent = `
                     <tr>
                         <td>${item.animalName}</td>
                         <td>${item.animalKind}</td>
@@ -467,19 +464,29 @@
                         <td>${item.createdDate}</td>
                         <td>${item.lastModifiedDate}</td>
                         <td>
-                            <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="updateButton2(this)" data-toggle="modal" data-target="#exampleModalCenter">更新</button>
-                            <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="updateButton(this)">更新-舊</button>
-                            <button id="delete" animalId="${item.animalId}" class="btn btn-primary" onclick="deleteButton(this)">刪除</button>
+                            <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="personalUpdateButton2(this)" data-toggle="modal" data-target="#exampleModalCenter">更新</button>
+                            <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="personalUpdateButton(this)">更新-舊</button>
+                            <button id="delete" animalId="${item.animalId}" class="btn btn-primary" onclick="personalDeleteButton(this)">刪除</button>
                         </td>
                     </tr>
                 `;
-                $("#personalTableAjax").append(tableContent);
-            })
-            // <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="updateButton(this)">更新</button>
-        }
-    })
+                    $("#personalTableAjax").append(tableContent);
+                })
 
-    function updateButton2(element) {
+                pages = Math.ceil(data.total / data.limit);
+                if (data.total == 0) {
+                    $("#personPageInfo").text("查無資料");
+                } else {
+                    $("#personPageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
+                }
+                // <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="updateButton(this)">更新</button>
+            }
+        })
+    }
+    getPersonal();
+
+
+    function personalUpdateButton2(element) {
 
         var animalId = $(element).attr("animalId");
 
@@ -504,7 +511,7 @@
     }
 
 
-    function updateButton(element) {
+    function personalUpdateButton(element) {
         var id = $(element).attr("animalId");
         var infoModal = document.querySelector("#infoModal");
         infoModal.showModal();
@@ -532,13 +539,127 @@
 
     }
 
-    function deleteButton(element) {
+    function personalDeleteButton(element) {
         var id = $(element).attr("animalId");
-        var delinfoModal = document.querySelector("#delinfoModal");
-        delinfoModal.showModal()
-        delinfoModal.setAttribute('class', id);
+        if (confirm("確定要刪除?") == true) {
+            $.ajax({
+                type: "DELETE",
+                url: `/personalAnimals/${user.id}/${id}`,
+                success: function () {
+                    alert("刪除成功")
+                    getPersonal();
+                }
+            })
+        }
     }
 
+    //////////////////////////////////////////////////////////////////////
+    // 走失協尋
+    // 查詢該使用者的刊登資訊
+    function getMissing() {
+        $.ajax({
+            type: "GET",
+            url: "/animalsMissing?id=" + user.id,
+            success: function (data) {
+                // 清空表格 tr 元素
+                $("#missingTableAjax").children("tr").empty();
+
+                $.each(data["results"], function (index, item) {
+                    var tableContent = `
+                    <tr>
+                        <td>${item.name}</td>
+                        <td>${item.kind}</td>
+                        <td>${item.variety}</td>
+                        <td>${item.sex}</td>
+                        <td>${item.createdDate}</td>
+                        <td>${item.missingDate}</td>
+                        <td>
+                            <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="missingUpdateButton2(this)" data-toggle="modal" data-target="#exampleModalCenter">更新</button>
+                            <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="missingUpdateButton(this)">更新-舊</button>
+                            <button id="delete" animalId="${item.animalId}" class="btn btn-primary" onclick="missingDeleteButton(this)">刪除</button>
+                        </td>
+                    </tr>
+                `;
+                    $("#missingTableAjax").append(tableContent);
+                })
+                pages = Math.ceil(data.total / data.limit);
+                if (data.total == 0) {
+                    $("#missingPageInfo").text("查無資料");
+                } else {
+                    $("#missingPageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
+                }
+                // <button id="update" animalId="${item.animalId}" class="btn btn-primary" onclick="updateButton(this)">更新</button>
+            }
+        })
+    }
+    getMissing();
+    function missingUpdateButton2(element) {
+
+        var animalId = $(element).attr("animalId");
+
+        $.ajax({
+            type: "GET",
+            url: "/animalsMissing/" + animalId,
+            success: function (data) {
+                $("#animalName_static").text(data.animalName);
+                $("#animalKind_static").text(data.animalKind);
+                $("#animalVariety_static").text(data.animalVariety);
+                $("#animalSex_static").text(data.animalSex);
+                $("#animalAge_static").text(data.animalAge);
+                $("#animalBodysize_static").text(data.animalBodysize);
+                $("#animalColor_static").text(data.animalColor);
+                $("#animalSterilization_static").text(data.animalSterilization);
+                $("#animalBacterin_static").text(data.animalBacterin);
+                $("#area_static").text(data.area);
+                $("#description_static").html(data.description);
+                $("#imageUrl_static").css("background-image", `url('images/missing/${data.userId}-${data.animalId}.jpg')`)
+            }
+        })
+    }
+
+    function missingUpdateButton(element) {
+        var id = $(element).attr("animalId");
+        var infoModal = document.querySelector("#infoModal");
+        infoModal.showModal();
+        infoModal.setAttribute('class', id);
+
+        $.ajax({
+            type: "GET",
+            url: "/animalsMissing/" + id,
+            success: function (data) {
+                $("#animalName").val(data.animalName);
+                $("#animalKind").val(data.animalKind);
+                $("#animalVariety").val(data.animalVariety);
+                $("#animalSex").val(data.animalSex);
+                $("#animalAge").val(data.animalAge);
+                $("#animalBodysize").val(data.animalBodysize);
+                $("#animalColor").val(data.animalColor);
+                $("#animalSterilization").val(data.animalSterilization);
+                $("#animalBacterin").val(data.animalBacterin);
+                $("#area").val(data.area);
+                $("#description").val(data.description);
+                $("#curImg").html(`<img src="images/missing/${data.userId}-${data.animalId}.jpg"  width="300" height="400">`)
+
+            }
+        })
+
+    }
+
+    function missingDeleteButton(element) {
+        var id = $(element).attr("animalId");
+        if (confirm("確定要刪除?") == true) {
+            $.ajax({
+                type: "DELETE",
+                url: `/animalsMissing/${user.id}/${id}`,
+                success: function () {
+                    alert("刪除成功")
+                    getMissing();
+                }
+            })
+        }
+    }
+
+    //////////////////////////////////////////////
     let close = document.querySelector("#close");
     close.addEventListener("click", function () {
         infoModal.close();
@@ -547,7 +668,6 @@
     delclose.addEventListener("click", function () {
         delinfoModal.close();
     });
-
 </script>
 
 </body>
