送養管理完成 修改避免快取獲得圖片

--- a/src/main/resources/templates/animal_funeral.html
+++ b/src/main/resources/templates/animal_funeral.html
@@ -33,6 +33,7 @@
         .btn.btn-primary:hover {
             color: white !important;
             background: #ffa500 !important;
+            outline: 1px solid;
             opacity: 1;
         }
 
