--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -33,6 +33,7 @@
         .btn.btn-primary:hover {
             color: white !important;
             background: #ffa500 !important;
+            outline: 1px solid;
             opacity: 1;
         }
 
@@ -138,9 +139,9 @@
                         </div>
                         <!-- 標題定位用主區塊 -->
                         <div class="col-4 px-0 d-flex justify-content-center">
-                            <span class="py-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
+                            <span class="py-1 px-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
                             <h3 class="modal-title font-weight-bold" id="animalName_static">這裡是寵物名字</h3>
-                            <span class="py-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
+                            <span class="py-1 px-1" style="color: orange;"><i class="fa fa-paw fa-2x"></i></span>
                         </div>
                         <!-- 標題定位用右區塊 -->
                         <div class="col-4 px-0">
@@ -316,7 +317,7 @@
                 <div class="col-md-6 col-lg-3 ftco-animate">
                     <div class="published">
                         <div class="img-wrap d-flex align-items-stretch">
-                            <div class="work mb-4 img d-flex align-items-end" style="background-image: url('${item.imageUrl}');"></div>
+                            <div class="work mb-4 img d-flex align-items-end" style="background-image: url('${item.imageUrl}?random=${Date.now()}');"></div>
                         </div>
                         <div class="text pt-3 px-3 pb-4 text-center">
                             <h3 id="${item.animalId}">${item.animalName}</h3>
@@ -381,7 +382,8 @@
                 $("#description_static").html(data.description.replaceAll("\n", "<br>"));
                 $("#createdDate_static").text(data.createdDate);
                 $("#lastModifiedDate_static").text(data.lastModifiedDate);
-                $("#imageUrl_static").css("background-image", `url('${data.imageUrl}')`);
+                // 避免從快取獲得圖片 加入隨機網址參數
+                $("#imageUrl_static").css("background-image", `url('${data.imageUrl}?random=${Date.now()}')`);
                 // console.log("會員:" + data.userId +
                 //     "\n編號:" + data.animalId +
                 //     "\n名字:" + data.animalName +
