--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,68 +17,69 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- 全域自訂CSS樣式 -->
     <link rel="stylesheet" href="css/_custom.css">
+    <style>
+        /*按鈕樣式*/
+        .btn.btn-primary {
+            color: black !important;
+            padding: 6px 20px;
+            font-size: 1rem;
+            letter-spacing: 1px;
+            border: transparent !important;
+            background: #fcd601 !important;
+            opacity: 1;
+            border-radius: 20px;
+        }
+
+        /*按鈕樣式-滑鼠掠過*/
+        .btn.btn-primary:hover {
+            color: white !important;
+            background: #ffa500 !important;
+            outline: 1px solid;
+            opacity: 1;
+        }
+
+        /*關於我們-文字段落格式*/
+        .container p {
+            color: black;
+            font-size: 20px;
+            /*font-weight: bolder;*/
+        }
+
+        /*輪播系統主區域增加自訂文字*/
+        .owl-carousel.animal-publish span,
+        .owl-carousel.animal-missing span {
+            font-size: 10px;
+            font-weight: bolder;
+            color: white;
+            padding: 10px;
+            /*position: relative;*/
+            /*top: 25%;*/
+            /*left: 25%;*/
+
+            /*!*半透明黑色背景效果*!*/
+            /*background-color: rgba(0, 0, 0, 0.4);*/
+
+            /*外框陰影效果*/
+            filter: drop-shadow(2px 2px 1px black);
+        }
+
+        .owl-carousel.animal-publish .banner-img,
+        .owl-carousel.animal-missing .banner-img {
+            border-radius: 10px;
+            /*padding: 10px;*/
+            /*position: relative;*/
+            /*top: 25%;*/
+            /*left: 25%;*/
+
+            /*!*半透明黑色背景效果*!*/
+            /*background-color: rgba(0, 0, 0, 0.4);*/
+
+            /*外框陰影效果*/
+            /*filter: drop-shadow(2px 2px 1px black);*/
+        }
+
+    </style>
 </head>
-<style>
-    /*按鈕樣式*/
-    .btn.btn-primary {
-        color: black !important;
-        padding: 6px 20px;
-        font-size: 1rem;
-        letter-spacing: 1px;
-        border: transparent !important;
-        background: #fcd601 !important;
-        opacity: 1;
-        border-radius: 20px;
-    }
-
-    /*按鈕樣式-滑鼠掠過*/
-    .btn.btn-primary:hover {
-        color: white !important;
-        background: #ffa500 !important;
-        opacity: 1;
-    }
-
-    /*關於我們-文字段落格式*/
-    .container p {
-        color: black;
-        font-size: 20px;
-        /*font-weight: bolder;*/
-    }
-
-    /*輪播系統主區域增加自訂文字*/
-    .owl-carousel.animal-publish span,
-    .owl-carousel.animal-missing span {
-        font-size: 10px;
-        font-weight: bolder;
-        color: white;
-        padding: 10px;
-        /*position: relative;*/
-        /*top: 25%;*/
-        /*left: 25%;*/
-
-        /*!*半透明黑色背景效果*!*/
-        /*background-color: rgba(0, 0, 0, 0.4);*/
-
-        /*外框陰影效果*/
-        filter: drop-shadow(2px 2px 1px black);
-    }
-
-    .owl-carousel.animal-publish .banner-img,
-    .owl-carousel.animal-missing .banner-img {
-        border-radius: 10px;
-        /*padding: 10px;*/
-        /*position: relative;*/
-        /*top: 25%;*/
-        /*left: 25%;*/
-
-        /*!*半透明黑色背景效果*!*/
-        /*background-color: rgba(0, 0, 0, 0.4);*/
-
-        /*外框陰影效果*/
-        /*filter: drop-shadow(2px 2px 1px black);*/
-    }
-
-</style>
 
 <body>
 <div id="header-page"></div>
@@ -91,7 +92,7 @@
             <h2>認養資訊</h2>
         </div>
         <div class="owl-carousel owl-theme animal-publish ftco-animate">
-        <!-- 輪播系統物件放置處 -->
+            <!-- 輪播系統物件放置處 -->
         </div>
         <div class="row pt-2">
             <div class="col-md-12 d-flex justify-content-center ftco-animate">
@@ -104,11 +105,12 @@
             <h2>協尋資訊</h2>
         </div>
         <div class="owl-carousel owl-theme animal-missing ftco-animate">
-        <!-- 輪播系統物件放置處 -->
+            <!-- 輪播系統物件放置處 -->
         </div>
         <div class="row pt-2">
             <div class="col-md-12 d-flex justify-content-center ftco-animate">
-                <a href="/animal_missing" class="btn btn-primary">想多瞭解<span class="fa fa-caret-right px-2"></span></a>
+                <a href="/animal_missing" class="btn btn-primary">想多瞭解<span
+                        class="fa fa-caret-right px-2"></span></a>
             </div>
         </div>
     </div>
