--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -254,7 +254,7 @@
 <!-- 導覽列結束 -->
 <!-- 輪播系統開始 -->
 <section>
-    <div class="owl-carousel owl-theme animal-header    ">
+    <div class="owl-carousel owl-theme animal-header">
         <div class="item img banner-img" style="background-image: url('/images/_banner1.jpg');">
             <div style="position: relative; top: 25%; left: 5%;">
                 <span>毛孩幸福，從這裡開始</span>
@@ -391,7 +391,7 @@
     owlNavCustom();
 
     // 重新載入 Bootstrap 模板 js
-    // $.getScript('js/main.js');
+    $.getScript('js/main.js');
 </script>
 
 </body>
