--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -217,7 +217,7 @@
                 <li class="nav-item dropdown">
                     <span class="nav-link dropdown-toggle" data-toggle="dropdown">認養毛孩</span>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/public_shelter">收容所認養</a>
+                        <a class="dropdown-item" href="/animal_public">收容所認養</a>
                         <a class="dropdown-item" href="/personal_shelter">刊登認養</a>
                     </div>
                 </li>
